--- a/.github/workflows/main_function-tatsukoni-test-v1.yml
+++ b/.github/workflows/main_function-tatsukoni-test-v1.yml
@@ -16,9 +16,6 @@ env:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v2
@@ -31,7 +28,7 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
-          pushd '.'
+          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           npm install
           npm run build --if-present
           npm run test --if-present
@@ -44,5 +41,5 @@ jobs:
           app-name: 'function-tatsukoni-test-v1'
           slot-name: 'Production'
           # slot-name: 'function-tatsukoni-test-v1'
-          package: '.'
+          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_246D050C770749E3B3FE15FE0CE205B7 }}
