--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Azure-Functions-Demo-v1",
+  "name": "azure-fnnctions-demo-v1",
   "version": "1.0.0",
   "description": "",
   "scripts": {
