--- a/.github/workflows/main_function-tatsukoni-test-v1-staging.yml
+++ b/.github/workflows/main_function-tatsukoni-test-v1-staging.yml
@@ -13,7 +13,7 @@ env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: './api' # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '18.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
   RESOURCE_GROUP_NAME: 'tatsukoni-test-v1'
-  FUNCTION_NAME: 'tatsukoni-test-v1'
+  FUNCTION_NAME: 'function-tatsukoni-test-v1'
 
 jobs:
   build-and-deploy:
