--- a/.github/workflows/main_function-tatsukoni-test-v1-staging.yml
+++ b/.github/workflows/main_function-tatsukoni-test-v1-staging.yml
@@ -50,11 +50,11 @@ jobs:
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A0AF8E9E40B6404094CAD4C070488318 }}
 
-      # - name: 'Swap Azure Function To Production'
-      #   id: slot_swap
-      #   run: |
-      #     az webapp deployment slot swap \
-      #       --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
-      #       --name ${{ env.FUNCTION_NAME }} \
-      #       --slot staging \
-      #       --target-slot production
+      - name: 'Swap Azure Function To Production'
+        id: slot_swap
+        run: |
+          az webapp deployment slot swap \
+            --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
+            --name ${{ env.FUNCTION_NAME }} \
+            --slot staging \
+            --target-slot production
