--- a/.github/workflows/main_function-tatsukoni-test-v1-staging.yml
+++ b/.github/workflows/main_function-tatsukoni-test-v1-staging.yml
@@ -45,7 +45,7 @@ jobs:
         uses: Azure/functions-action@v1
         id: fa
         with:
-          app-name: 'function-tatsukoni-test-v1'
+          app-name: ${{ env.FUNCTION_NAME }}
           slot-name: 'staging'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           # publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A0AF8E9E40B6404094CAD4C070488318 }}
