--- a/.github/workflows/main_function-tatsukoni-test-v1-staging.yml
+++ b/.github/workflows/main_function-tatsukoni-test-v1-staging.yml
@@ -14,6 +14,7 @@ env:
   NODE_VERSION: '18.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
   RESOURCE_GROUP_NAME: 'tatsukoni-test-v1'
   FUNCTION_NAME: 'function-tatsukoni-test-v1'
+  SLOT_NAME: 'staging'
 
 jobs:
   build-and-deploy:
@@ -46,9 +47,8 @@ jobs:
         id: fa
         with:
           app-name: ${{ env.FUNCTION_NAME }}
-          slot-name: 'staging'
+          slot-name: ${{ env.SLOT_NAME }}
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          # publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A0AF8E9E40B6404094CAD4C070488318 }}
 
       - name: 'Logout via Azure CLI'
         run: |
