--- a/.github/workflows/main_function-tatsukoni-test-v1-staging.yml
+++ b/.github/workflows/main_function-tatsukoni-test-v1-staging.yml
@@ -20,6 +20,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     timeout-minutes: 10
+
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v2
@@ -61,5 +62,5 @@ jobs:
       #     az webapp deployment slot swap \
       #       --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
       #       --name ${{ env.FUNCTION_NAME }} \
-      #       --slot staging \
+      #       --slot ${{ env.SLOT_NAME }} \
       #       --target-slot production
