--- a/.github/workflows/main_function-tatsukoni-test-v1-staging.yml
+++ b/.github/workflows/main_function-tatsukoni-test-v1-staging.yml
@@ -52,15 +52,14 @@ jobs:
           slot-name: ${{ env.SLOT_NAME }}
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
 
+      - name: 'Swap Azure Function To Production'
+        id: slot_swap
+        run: |
+          az webapp deployment slot swap \
+            --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
+            --name ${{ env.FUNCTION_NAME }} \
+            --slot ${{ env.SLOT_NAME }}
+
       - name: 'Logout via Azure CLI'
         run: |
           az logout
-
-      # - name: 'Swap Azure Function To Production'
-      #   id: slot_swap
-      #   run: |
-      #     az webapp deployment slot swap \
-      #       --resource-group ${{ env.RESOURCE_GROUP_NAME }} \
-      #       --name ${{ env.FUNCTION_NAME }} \
-      #       --slot ${{ env.SLOT_NAME }} \
-      #       --target-slot production
